--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ files.zip
 .vscode/settings.json
 Example/gcd.e
 Example/mul.e
+Example/354.rm
+.vscode/settings.json
+Example/add.e
+.vscode/settings.json
