feat(Interpreter): 添加执行延迟控制参数
在Interpreter类中增加delay参数，用于控制每条指令执行后的延迟时间
修改.gitignore文件，简化Example目录下的文件忽略规则

--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,7 @@ libInterpreter.lib
 main.exe
 .vscode/settings.json
 files.zip
-.vscode/settings.json
-Example/gcd.e
-Example/mul.e
-Example/354.rm
-.vscode/settings.json
-Example/add.e
-.vscode/settings.json
+.vscode/*
+Example/*
+
+
