--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,11 @@
-1.e
-Interpreter.o
-main.o
 
-.vscode/tasks.json
-1.e
-libInterpreter.lib
-.vscode/launch.json
-.vscode/settings.json
-main.exe
-.vscode/settings.json
-files.zip
-.vscode/*
+
+
+
+
 Example/*
-
-
+.vscode/*
+*.exe
+*.o
+*.lib
+*.zip
